🚀 Production-ready codebase with React 19 & Vercel deployment
✅ MAJOR UPDATES:
- Upgraded to React 19, Vite 7, TypeScript 5.9
- Resolved all dependency conflicts (removed react-speech-kit)
- Fixed React 19 compatibility issues
- Optimized build process and bundle sizes

🔧 TECHNICAL IMPROVEMENTS:
- Enhanced Supabase integration with proper auth config
- Added comprehensive error handling and 404 pages
- Implemented contrast modes (Low/Medium/High)
- Added security headers and CORS configuration
- Created production-ready Vercel deployment config

🎨 UI/UX ENHANCEMENTS:
- Fixed all UI components for React 19
- Added proper error boundaries
- Enhanced accessibility features
- Improved loading states and user feedback
- Added comprehensive TTS/STT with native Web Speech API

🚀 DEPLOYMENT READY:
- Vercel configuration optimized
- Environment variables properly configured
- Build process streamlined (2.62s build time)
- All TypeScript errors resolved
- Production deployment guide created

📦 DEPENDENCIES:
- Removed conflicting react-speech-kit
- Updated all packages to latest stable versions
- Fixed npm audit vulnerabilities
- Optimized package.json structure

Ready for production deployment! 🎉

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,24 @@
   "include": ["client/src/**/*", "shared/**/*", "server/**/*"],
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
+    "target": "ES2022",
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
     "module": "ESNext",
     "strict": true,
-    "lib": ["esnext", "dom", "dom.iterable"],
-    "jsx": "preserve",
+    "lib": ["ES2022", "dom", "dom.iterable"],
+    "jsx": "react-jsx",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "exactOptionalPropertyTypes": false,
     "baseUrl": ".",
     "types": ["node", "vite/client"],
     "paths": {
